--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Malendar is a web-application that allows you to see new and past releases of anime!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link href="%PUBLIC_URL%/favicon.svg" rel="apple-touch-icon"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>malendar</title>
 </head>
