* Added support for days with several anime at once (sort by popularity); * Pictures now have larger resolution by default * Theme preference is saving now in localStorage * Some restructuring of codebase

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8"/>
     <!--<link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>-->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
+    <link href="%PUBLIC_URL%/favicon.svg" rel="icon"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="#000000" name="theme-color"/>
     <meta
-            name="description"
             content="Malendar is a web-application that allows you to see new and past releases of anime!"
+            name="description"
     />
     <link href="%PUBLIC_URL%/favicon.svg" rel="apple-touch-icon"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>malendar</title>
 </head>
 <body>
