Patch _03. Some visual bug fixes + temporal solution for ongoing' loading state

--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,18 @@
         gtag('config', 'UA-22682187-2');
     </script>
     <meta charset="utf-8"/>
-    <!--<link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>-->
-    <link href="%PUBLIC_URL%/favicon.svg" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
             content="Malendar is a web-application that allows you to see new and past releases of anime!"
             name="description"
     />
-    <link href="%PUBLIC_URL%/favicon.svg" rel="apple-touch-icon"/>
+    <link href="%PUBLIC_URL%/apple-touch-icon.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="%PUBLIC_URL%/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="%PUBLIC_URL%/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link color="#5bbad5" href="%PUBLIC_URL%/safari-pinned-tab.svg" rel="mask-icon">
+    <meta content="#b91d47" name="msapplication-TileColor">
+    <meta content="#ffffff" name="theme-color">
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>malendar</title>
 </head>
